Get user from session. Add util class. Reformat login page and link address of tag <a>.

--- a/src/main/resources/static/entrance/dashboard.html
+++ b/src/main/resources/static/entrance/dashboard.html
@@ -18,6 +18,25 @@
 	href="../global/plugins/bootstrap-3.3.7/css/bootstrap.min.css">
 <link href="../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
+<!-- Typeahead Style -->
+<link rel="stylesheet"
+	href="../global/plugins/typeahead/css/typeahead.css" />
+<link rel="stylesheet"
+	href="../global/plugins/isteven-multi-select/isteven-multi-select.css">
+<link rel="stylesheet"
+	href="../global/plugins/toastr/css/angular-toastr.css" />
+<link rel="stylesheet" href="../global/plugins/ng-table/ng-table.css">
+<link rel="stylesheet" href="../global/plugins/simditor/simditor/styles/simditor.css"/>
+<link rel="stylesheet" href="../global/plugins/simditor/simditor-html/styles/simditor-html.css"/>
+<link rel="stylesheet" href="../global/template/multiple-choice-question/mutiple-question.template.css" />
+<link rel="stylesheet" href="../global/plugins/CodeMirror/lib/codemirror.css" />
+<link rel="stylesheet" href="../global/template/single-selection-template/singleChoice.template.css" />
+<link rel="stylesheet" href="../global/template/short-answer-template/short-answer-module.css" />
+<link rel="stylesheet" href="../global/plugins/meterial/css/angular-material.min.css" />
+<link rel="stylesheet" href="../global/plugins/angular-chart/angular-chart.css" />
+<link rel="stylesheet" href="../global/plugins/ngTagsInput/ng-tags-input.bootstrap.min.css"/>
+<link rel="stylesheet" href="../global/plugins/ngTagsInput/ng-tags-input.min.css"/>
+
 <!-- NProgress -->
 <link href="../vendors/nprogress/nprogress.css" rel="stylesheet">
 <!-- iCheck -->
@@ -31,14 +50,50 @@
 
 <body class="nav-md" data-ui-view="">
 
+    <script src="../global/plugins/lodash-min.js"></script>
 	<script src="../global/plugins/angular-1.5.8/angular.min.js"></script>
 	<script src="../global/plugins/angular-1.5.8/angular-ui-router.js"></script>
 	<script src="../global/plugins/jquery-3.1.1.js"></script>
 	<script src="../global/plugins/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 	<script src="../global/plugins/ocLazyLoad.js"></script>
+	<script
+		src="../global/plugins/isteven-multi-select/isteven-multi-select.js"></script>
+	
+	<script
+		src="../global/plugins/isteven-multi/isteven-multi.js"></script>
+	
 	<script src="../global/plugins/ui-bootstrap-tpls-2.2.0.js"></script>
 	<script src="../global/plugins/toastr/js/angular-toastr.tpls.js"></script>
 	<script src="../global/plugins/angular-1.5.8/angular-animate.js"></script>
+	<script src="../global/plugins/ng-table/ng-table.js"></script>
+	<script src="../global/plugins/angular-1.5.8/angular-resource.js"></script>
+	<script src="../global/plugins/angular-1.5.8/angular-sanitize.min.js"></script>
+	<script src="../global/plugins/angular-1.5.8/ng-file-upload.min.js"></script>
+	<script src="../global/plugins/typeahead/js/typeahead.js"></script>
+	
+	<script src="../global/plugins/simditor/simple-module/lib/module.js"></script>
+	<script src="../global/plugins/simditor/simple-hotkeys/lib/hotkeys.js"></script>
+	<script src="../global/plugins/simditor/simple-uploader/lib/uploader.js"></script>
+	<script src="../global/plugins/simditor/simditor/lib/simditor.js"></script>
+	<script src="../global/plugins/js-beautify/js/lib/beautify.js"></script>
+	<script src="../global/plugins/js-beautify/js/lib/beautify-css.js"></script>
+	<script src="../global/plugins/js-beautify/js/lib/beautify-html.js"></script>
+	<script src="../global/plugins/simditor/simditor-html/lib/simditor-html.js"></script>
+	<script src="../global/plugins/simditor/angular-simditor.js"></script>
+	<script src="../global/plugins/CodeMirror/lib/codemirror.js"></script>
+	<script src="../global/plugins/CodeMirror/mode/clike.js"></script>
+	<script src="../global/template/multiple-choice-question/multiple-question.directive.js"></script>
+	<script src="../global/template/programing-question/programing-question.directive.js"></script>
+	<script src="../global/template/short-answer-template/short-answer-module.js"></script>
+	<script src="../global/template/single-selection-template/singleChoice.directive.js"></script>
+	<script src="../global/plugins/meterial/js/angular-aria.min.js"></script>
+	<script src="../global/plugins/meterial/js/angular-material.min.js"></script>
+	<script src="../global/plugins/meterial/js/angular-messages.min.js"></script>
+	<script src="../global/template/report-chart-template/report-chart.js"></script>
+	<script src="../global/plugins/angular-chart/Chart.min.js"></script>
+	<script src="../global/plugins/angular-chart/angular-chart.min.js"></script>
+	<script src="../global/plugins/ngTagsInput/ng-tags-input.min.js"></script>
+	
 
     <!-- FastClick -->
     <script src="../vendors/fastclick/lib/fastclick.js"></script>
