--- a/src/main/resources/static/entrance/home/home.html
+++ b/src/main/resources/static/entrance/home/home.html
@@ -8,7 +8,7 @@
             <!-- menu profile quick info -->
             <div class="profile">
               <div class="profile_pic">
-                <img src="../global/img/cat.jpg" alt="..." class="img-circle profile_img">
+                <img src="../global/img/cat.jpg" alt="..." class="img-rounded profile_img">
               </div>
               <div class="profile_info">
                 <span>欢迎登录,</span>
@@ -83,7 +83,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="../global/img/cat.jpg" alt="">
+                    <img class="img-rounded" src="../global/img/cat.jpg" alt="">
                                         管理员
                     <span class=" fa fa-chevron-circle-down"></span>
                   </a>
