--- a/src/main/resources/static/errorP.html
+++ b/src/main/resources/static/errorP.html
@@ -20,7 +20,7 @@
 			</h2>
 			<h2>
 				跳转至登录页面：
-				<a href="localhost:8080/admin/login" style="color: #F4FF77;">成绩管理系统登录</a>
+				<a href="/entrance/home/login.html" style="color: #F4FF77;">成绩管理系统登录</a>
 			</h2>
 			<h1 style="margin-top: 50px;">
 				如有问题，请联系管理员。
