Add logout function. Add MD5 crypt for password.

--- a/src/main/resources/static/entrance/dashboard.html
+++ b/src/main/resources/static/entrance/dashboard.html
@@ -17,6 +17,8 @@
 <link rel="stylesheet"
 	href="../global/plugins/bootstrap-3.3.7/css/bootstrap.min.css">
 <link href="../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+<!-- Favicon -->
+<link rel="shortcut icon" href="../favicon.ico" />
 
 <!-- Typeahead Style -->
 <link rel="stylesheet"
