--- a/src/main/resources/static/entrance/infomation-view/infomation-view.html
+++ b/src/main/resources/static/entrance/infomation-view/infomation-view.html
@@ -1,32 +1,36 @@
-<div style="color: red;">
+<div id="preloader">
+    <div id="loader"></div>
+</div>
+<div class="row">
+    <div class="col-md-offset-11">
+			<button class="btn btn-primary">编辑资料</button>
+    </div>
+</div>
+<div class="row">
+</div>
+<div style="color: black; font: 20em; padding-bottom: 50%">
   <table class="table table-striped table-bordered table-hover">
-	<thead>
-	  <tr>
-	    <th>#</th>
-	    <th>Product</th>
-	    <th>Payment Taken</th>
-	    <th>Status</th>
+	  <tr style="font: 40px;">
+	    <th style="font: 40px;">姓名</th>
+	    <td>秦明玉</td>
+	    <th>性别</th>
+	    <td>女</td>
 	  </tr>
-	</thead>
-    <tbody>
-      <tr class="success">
-        <td>1</td>
-        <td>TB - Monthly</td>
-        <td>01/04/2012</td>
-        <td>Approved</td>
-      </tr>
-      <tr class="error">
-        <td>2</td>
-        <td>TB - Monthly</td>
-        <td>02/04/2012</td>
-        <td>Declined</td>
-      </tr>
-      <tr class="warning">
-        <td>3</td>
-        <td>TB - Monthly</td>
-        <td>03/04/2012</td>
-        <td>Pending</td>
-      </tr>
-    </tbody>
+	  <tr>
+	    <th>学院</th>
+	    <td>信息技术与科技学院</td>
+	    <th>专业</th>
+	    <td>测控技术与仪器</td>
+	  </tr>
+	  <tr>
+	    <th>入学时间</th>
+	    <td>2013-9</td>
+	    <th>班级</th>
+	    <td>二班</td>
+	  </tr>
+	  <tr>
+	    <th>专业类别</th>
+	    <td>非航海类</td>
+	  </tr>
   </table>
 </div>
