--- a/src/main/resources/static/entrance/home/home.html
+++ b/src/main/resources/static/entrance/home/home.html
@@ -62,10 +62,10 @@
 
             <!-- /menu footer buttons -->
             <div class="sidebar-footer hidden-small">
-              <a data-toggle="tooltip" data-placement="top" title="消息" href="#1">
+              <a data-toggle="tooltip" data-placement="top" title="消息" ui-sref-active="active" ui-sref=".infomation-news">
                 <span class="glyphicon glyphicon-bell" aria-hidden="true"></span>
               </a>
-              <a data-toggle="tooltip" data-placement="top" title="退出" href="#2">
+              <a data-toggle="tooltip" data-placement="top" title="退出" href="javascript:;" ng-click="logout()">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
               </a>
             </div>
@@ -88,17 +88,17 @@
                     <span class=" fa fa-chevron-circle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
-                    <li><a href="javascript:;">
+                    <li><a ui-sref-active="active" ui-sref=".infomation-view">
                     	<i class="fa fa-folder-open pull-right"></i>个人信息</a></li>
                     <li>
-                      <a href="javascript:;">
+                      <a ui-sref-active="active" ui-sref=".infomation-news">
                         <span class="badge bg-red pull-right">2</span>
                         <i class="fa fa-bell pull-right"></i><span>消息</span>
                       </a>
                     </li>
                     <li><a href="javascript:;">
                     	<i class="fa fa-question-circle pull-right"></i>帮助</a></li>
-                    <li><a href="login.html">
+                    <li><a href="javascript:;" ng-click="logout()">
                     	<i class="fa fa-sign-out pull-right"></i>退出登录</a></li>
                   </ul>
                 </li>
