--- a/src/main/resources/static/entrance/home/home.html
+++ b/src/main/resources/static/entrance/home/home.html
@@ -1,8 +1,8 @@
-<div class="container body">
+<div class="container body" style="background: #2A3F54;">
       <div class="main_container">
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
-          	
+
             <div class="clearfix"></div>
 
             <!-- menu profile quick info -->
@@ -20,7 +20,7 @@
             <br/>
 
             <!-- sidebar menu -->
-            <div id="sidebar-menu" class="main_menu col-md-12">
+            <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
               <div class="menu_section">
                 <h3>&nbsp;</h3>
                 <ul class="nav side-menu">
