--- a/src/main/resources/static/entrance/infomation-view/infomation-view.html
+++ b/src/main/resources/static/entrance/infomation-view/infomation-view.html
@@ -1,36 +1,33 @@
-<div id="preloader">
-    <div id="loader"></div>
-</div>
-<div class="row">
+<div class="infoview">
+<div class="row editBtn">
     <div class="col-md-offset-11">
-			<button class="btn btn-primary">编辑资料</button>
+		<button class="btn btn-primary">编辑资料</button>
     </div>
 </div>
-<div class="row">
-</div>
-<div style="color: black; font: 20em; padding-bottom: 50%">
+<div>
   <table class="table table-striped table-bordered table-hover">
-	  <tr style="font: 40px;">
-	    <th style="font: 40px;">姓名</th>
-	    <td>秦明玉</td>
+	  <tr style="font: 30px;">
+	    <th>姓名</th>
+	    <td ng-bind="user.name"></td>
 	    <th>性别</th>
-	    <td>女</td>
+	    <td ng-bind="user.sex"></td>
 	  </tr>
 	  <tr>
 	    <th>学院</th>
-	    <td>信息技术与科技学院</td>
+	    <td ng-bind="user.academy"></td>
 	    <th>专业</th>
-	    <td>测控技术与仪器</td>
+	    <td ng-bind="user.major"></td>
 	  </tr>
 	  <tr>
-	    <th>入学时间</th>
-	    <td>2013-9</td>
+	    <th ng-bind="user.columnName1"></th>
+	    <td ng-bind="user.columnData1"></td>
 	    <th>班级</th>
-	    <td>二班</td>
+	    <td ng-bind="user.sclass"></td>
 	  </tr>
-	  <tr>
+	  <tr ng-show="user.student">
 	    <th>专业类别</th>
-	    <td>非航海类</td>
+	    <td ng-bind="user.stype"></td>
 	  </tr>
   </table>
+</div>
 </div>
