--- a/src/main/resources/static/entrance/dashboard.html
+++ b/src/main/resources/static/entrance/dashboard.html
@@ -47,6 +47,7 @@
 <link href="../vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet">
 
 <!-- Custom Theme Style -->
+<link href="../global/css/common.css" rel="stylesheet">
 <link href="../build/css/custom.css" rel="stylesheet">
 </head>
 
