--- a/src/main/resources/static/entrance/member-student/member-student.html
+++ b/src/main/resources/static/entrance/member-student/member-student.html
@@ -1,9 +1,77 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-	</head>
-	<body>
-	</body>
-</html>
+<div class="studentview">
+<div name="studentTable">
+	<div class="content">
+		<div style="float: right;">
+			<!--show drop down menu-->
+			<div isteven-multi-select input-model="filter" output-model="outputSelect"
+				button-label="name" item-label="name" tick-property="ticked"></div>
+		</div>
+		<table ng-table="tableParams"
+				class="table table-striped table-condensed table-hover table-align table-bordered">
+			<tr ng-repeat="student in $data" ng-form="studentForm"
+				demo-tracked-table-row="student">
+				<td ng-if="filter[0].ticked" data-title="'姓名'" 
+					filter="{sname: 'text'}" sortable="'sname'" 
+					header-class="'active'" demo-tracked-table-cell
+					>{{student.sname}}</td>
+
+				<td ng-if="filter[1].ticked" data-title="'账号'"
+					filter="{snumber : 'text'}" sortable="'snumber'" 
+					header-class="'active'" demo-tracked-table-cell 
+					>{{student.snumber}}</td>
+
+				<td ng-if="filter[2].ticked" data-title="'性别'"
+					filter="{ssex: 'text'}" sortable="'ssex'"
+					header-class="'active'" demo-tracked-table-cell
+				    >{{student.ssex}}</td>
+
+				<td ng-if="filter[3].ticked" data-title="'入学时间'"
+					filter="{ sdate: 'text'}" sortable="'sdate'"
+					header-class="'active'" demo-tracked-table-cell
+					>
+					{{student.sdate}}</td>
+
+				<td ng-if="filter[4].ticked" data-title="'学院'"
+					filter="{academy: 'text'}" sortable="'academy'"
+					header-class="'active'" demo-tracked-table-cell
+					>{{student.academy}}</td>
+
+				<td ng-if="filter[5].ticked" data-title="'专业'"
+					filter="{major: 'text'}" sortable="'major'" 
+					header-class="'active'" demo-tracked-table-cell
+					>{{student.major}}</td>
+
+				<td ng-if="filter[6].ticked" data-title="'班级'"
+					filter="{studentclass: 'text'}" sortable="'studentclass'" 
+					header-class="'active'" demo-tracked-table-cell
+					>{{student.studentclass}}</td>
+
+				<td ng-if="filter[7].ticked" data-title="'专业类别'"
+					filter="{studenttype: 'text'}" sortable="'studenttype'" 
+					header-class="'active'" demo-tracked-table-cell
+					>{{student.studenttype}}</td>
+				
+				<td ng-if="filter[8].ticked" data-title="'身份证号'"
+					filter="{sCertiID: 'text'}" sortable="'sCertiID'" 
+					header-class="'active'" demo-tracked-table-cell
+					>{{student.sCertiID}}</td>	
+
+				<td ng-if="filter[9].ticked" data-title="'邮箱'"
+					filter="{sEmail: 'text'}" sortable="'sEmail'" 
+					header-class="'active'" demo-tracked-table-cell
+					>{{student.sEmail}}</td>
+			
+				<td ng-if="filter[10].ticked" data-title="'电话'"
+					filter="{sPhone: 'text'}" sortable="'sPhone'" 
+					header-class="'active'" demo-tracked-table-cell
+					>{{student.sPhone}}</td>
+				
+				<td ng-if="filter[11].ticked" data-title="'民族'"
+					filter="{sNation: 'text'}" sortable="'sNation'" 
+					header-class="'active'" demo-tracked-table-cell
+					>{{student.sNation}}</td>				
+			</tr>
+		</table>
+	</div>
+</div>
+</div>
