Complete member-student/teacher page.

--- a/src/main/resources/static/entrance/infomation-view/infomation-view.html
+++ b/src/main/resources/static/entrance/infomation-view/infomation-view.html
@@ -20,7 +20,7 @@
 	  </tr>
 	  <tr>
 	  	<th>班级</th>
-	    <td ng-bind="user.sclass"></td>
+	    <td ng-bind="user.aclass"></td>
 	    <th ng-bind="user.columnName1"></th>
 	    <td ng-bind="user.columnData1"></td>
 	  </tr>
