--- a/src/main/resources/static/entrance/member-student/member-student.html
+++ b/src/main/resources/static/entrance/member-student/member-student.html
@@ -1,24 +1,37 @@
 <div class="studentview">
 <div name="studentTable">
 	<div class="content">
-		<div style="float: right;">
-			<!--show drop down menu-->
-			<div isteven-multi-select input-model="filter" output-model="outputSelect"
-				button-label="name" item-label="name" tick-property="ticked"></div>
+		<div class="row">
+			<div style="float: left;">
+				<button class="btn btn-primary" ng-click="addStudent()">添加学生</button>
+				<button class="btn btn-danger" ng-click="deleteStudent()">删除学生</button>
+			</div>
+			<div style="float: right;">
+				<!--show drop down menu-->
+				<div isteven-multi-select input-model="filter" output-model="outputSelect"
+					button-label="name" item-label="name" tick-property="ticked"></div>
+			</div>
 		</div>
+		<script type="text/ng-template" id="headerCheckbox.html">
+			<input type="checkbox" ng-model="checkboxes.checked" class="select-all" value="" />
+		</script>
 		<table ng-table="tableParams"
 				class="table table-striped table-condensed table-hover table-align table-bordered">
 			<tr ng-repeat="student in $data" ng-form="studentForm"
 				demo-tracked-table-row="student">
+				<td header-class="'active'" header="'headerCheckbox.html'"><input
+					type="checkbox" ng-model="checkboxes.items[student.sid]"></td>
+				<td ng-if="filter[1].ticked" data-title="'账号'"
+					filter="{snumber : 'text'}" sortable="'snumber'" 
+					header-class="'active'" demo-tracked-table-cell 
+					><button style="border: 0;text-align: center;vertical-align: middle;color:grey;" 
+						class="btn btn-default" title="点击编辑学生信息"
+					ng-click="addStudent(student)">{{student.snumber}}</button></td>
+				
 				<td ng-if="filter[0].ticked" data-title="'姓名'" 
 					filter="{sname: 'text'}" sortable="'sname'" 
 					header-class="'active'" demo-tracked-table-cell
 					>{{student.sname}}</td>
-
-				<td ng-if="filter[1].ticked" data-title="'账号'"
-					filter="{snumber : 'text'}" sortable="'snumber'" 
-					header-class="'active'" demo-tracked-table-cell 
-					>{{student.snumber}}</td>
 
 				<td ng-if="filter[2].ticked" data-title="'性别'"
 					filter="{ssex: 'text'}" sortable="'ssex'"
@@ -75,3 +88,181 @@
 	</div>
 </div>
 </div>
+
+
+<!--template for edit modal-->
+<script type="text/ng-template" id="addStudent.html">
+	<div class="modalCustom">
+		<div>
+			<div class="modal-content">
+				<!--header.....-->
+				<div class="modal-header" style="height: 50px;">
+				<a class="close glyphicon glyphicon-remove" style="color: darkred;" ng-click="cancel()" autofocus="false"></a>
+					<p class="text-left">
+						<span style="font-size: 23px; font-weight: 600;">添加信息</span>
+					</p>
+				</div>
+				<!--main body......-->
+				<div class="modal-body">
+					<div>
+						<form name="StuInfForm"
+							action="#" method="post" novalidate>
+							<table width="100%" border="1"
+								class="table table-hover table-bordered table-striped">
+									<tr class="form-group">
+										<td>*账号</td>
+										<td><span><input type="text" class="form-control" name="snumber"
+											ng-model="student.snumber" ng-pattern="/^[0-9]*$/" required/></span>
+										<span class="error-display" ng-show="StuInfForm.snumber.$dirty && StuInfForm.snumber.$invalid"> 
+											<span class="fa fa-close" ng-show="StuInfForm.snumber.$error.pattern" ng-bind=NUMBER_INVALID></span>
+											<span class="fa fa-close" ng-show="StuInfForm.snumber.$error.required" ng-bind=NUMBER_EMPTY></span>
+										</span>
+										</td>
+										<td>*姓名</td>
+										<td><span><input type="text" class="form-control" 
+											autofocus="autofocus" name="sname" ng-model="student.sname" required/></span>
+										<span class="error-display" ng-show="StuInfForm.sname.$dirty"> 
+											<span class="fa fa-close" ng-show="StuInfForm.sname.$error.required" ng-bind=NAME_EMPTY></span>
+										</span>
+										</td>
+									</tr>
+									<tr class="form-group">
+										<td>性别</td>
+										<td><span><select class="form-control" ng-model="student.ssex"
+													ng-options="sex.name as sex.name for sex in gender">
+												 </select></span>
+										</td>
+										<td>*入学时间</td>
+										<td><span><input type="text" class="form-control" name="sdate"
+											ng-model="student.sdate" ng-pattern="/^[0-9]*$/" placeholder="格式:yyyymm" required/></span>
+										<span class="error-display" ng-show="StuInfForm.sdate.$dirty && StuInfForm.sdate.$invalid"> 
+											<span class="fa fa-close" ng-show="StuInfForm.sdate.$error.pattern" ng-bind=DATE_INVALID></span>
+											<span class="fa fa-close" ng-show="StuInfForm.sdate.$error.required" ng-bind=DATE_EMPTY></span>
+										</span>
+										</td>
+									</tr>
+									<tr class="form-group">
+										<td>*学院</td>
+										<td><span><select class="form-control" ng-model="student.sacademy" ng-click="loadMajor()"
+													ng-options="academy.aid as academy.aname for academy in academies" required>
+												</select></span>
+										</td>
+										<td>*专业</td>
+										<td><span><select name="smajor" class="form-control" ng-model="student.smajor" ng-click="loadClass()"
+													ng-options="major.mid as major.mname for major in majors" required>
+												</select></span>
+										<span class="error-display" ng-show="StuInfForm.smajor.$dirty && StuInfForm.smajor.$invalid"> 
+											<span class="fa fa-close" ng-show="StuInfForm.smajor.$error.required" ng-bind=MAJOR_EMPTY></span>
+										</span>
+										</td>
+									</tr>
+									<tr class="form-group">
+										<td>*班级</td>
+										<td><span><select class="form-control" ng-model="student.sclass"
+													ng-options="class.cid as class.display for class in classes" required>
+											</select></span>
+										<span class="error-display" ng-show="StuInfForm.smajor.$dirty && StuInfForm.smajor.$invalid"> 
+											<span class="fa fa-close" ng-show="StuInfForm.smajor.$error.required" ng-bind=CLASS_EMPTY></span>
+										</span>
+										</td>
+										<td>*专业类别</td>
+										<td><span><select class="form-control" ng-model="student.stype"
+													ng-options="type.id as type.name for type in majortype">
+										</select></span>
+										</td>
+									</tr>
+									<tr class="form-group">
+										<td>邮箱</td>
+										<td><span><input type="email" class="form-control" 
+											autofocus="autofocus" name="sEmail" ng-model="student.sEmail"/></span>
+										<span class="error-display" ng-show="StuInfForm.sEmail.$dirty && StuInfForm.sEmail.$invalid"> 
+											<span class="fa fa-close" ng-show="StuInfForm.sEmail.$error.email" ng-bind=EMAIL_INVALID></span>
+										</span>
+										</td>
+										<td>联系电话</td>
+										<td><span><input type="text" class="form-control" name="sPhone"
+											ng-model="student.sPhone" ng-pattern="/^[0-9]*$/"/></span>
+										<span class="error-display" ng-show="StuInfForm.sPhone.$dirty && StuInfForm.sPhone.$invalid"> 
+											<span class="fa fa-close" ng-show="StuInfForm.sPhone.$error.pattern" ng-bind=PHONE_INVALID></span>
+										</span>
+										</td>
+									</tr>
+									<tr class="form-group">
+										<td>身份证号</td>
+										<td><span><input type="text" class="form-control" name="sCertiID"
+											ng-model="student.sCertiID"/></span></td>
+										<td>民族</td>
+										<td><span><input type="text" class="form-control" name="sNation"
+											ng-model="student.sNation"/></span></td>
+									</tr>
+									<tr class="form-group">
+										<td>*登录密码</td>
+										<td><span><input type="password" class="form-control" name="spassword"
+											ng-model="student.spassword" required/></span>
+										<span class="error-display" ng-show="StuInfForm.spassword.$dirty"> 
+											<span class="fa fa-close" ng-show="StuInfForm.spassword.$error.required" ng-bind=PASSWORD_EMPTY></span>
+										</span>
+										</td>
+										<td>*确认密码</td>
+										<td><span><input type="password" class="form-control" name="password1"
+											ng-model="student.password1" required/></span>
+										<span class="error-display" ng-show="StuInfForm.password1.$dirty"> 
+											<span class="fa fa-close" ng-show="StuInfForm.password1.$error.required" ng-bind=PASSWORD_EMPTY></span>
+											<span class="fa fa-close" ng-show="!StuInfForm.password1.$error.required && (student.spassword != student.password1)" ng-bind=PASSWORD_NOT_EQUAL></span>
+										</span>
+										</td>
+									</tr>
+							</table>
+						</form>
+					</div>
+				</div>
+				<!--modal body end-->
+				<!--modal footer....-->
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary"
+						ng-click="addStudentInfo()" ng-disabled="StuInfForm.$invalid">保存</button>
+					<button type="button" class="btn btn-danger" ng-click="cancel()">取消</button>
+				</div>
+			</div>
+		</div>
+
+	</div>
+</script>
+
+<script type="text/ng-template" id="sureSaveS.html">
+	<div class="modalCustom">
+		<di>
+			<div class="modal-content">
+				<div class="modal-header">
+					<h2 class="modal-title" style="font-size: 20px; font-weight: 600;">提示</h2>
+				</div>
+				<div class="modal-body">
+					<h3>确定保存所编辑内容吗？</h3>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary btn-lg yes" style="float: left;width: 16%" ng-click="yes()">是</button>
+					<button type="button" class="btn btn-danger btn-lg no" style="float: right;width: 16%" ng-click="no()">否</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</script>
+
+<script type="text/ng-template" id="sureDelete.html">
+	<div class="modalCustom">
+		<div>
+			<div class="modal-content">
+				<div class="modal-header">
+					<h2 class="modal-title" style="font-size: 20px; font-weight: 600;">提示</h2>
+				</div>
+				<div class="modal-body">
+					<h3>确定删除所选学生吗？</h3>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary btn-lg yes" style="float: left;width: 16%" ng-click="yes()">是</button>
+					<button type="button" class="btn btn-danger btn-lg no" style="float: right;width: 16%" ng-click="no()">否</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</script>
