--- a/src/main/resources/static/entrance/member-teacher/member-teacher.html
+++ b/src/main/resources/static/entrance/member-teacher/member-teacher.html
@@ -1,24 +1,36 @@
 <div class="teacherview">
 <div name="teacherTable">
 	<div class="content">
+		<div style="float: left;">
+			<button class="btn btn-primary" ng-click="addTeacher()">添加教师</button>
+			<button class="btn btn-danger" ng-click="deleteTeacher()">删除教师</button>
+		</div>
 		<div style="float: right;">
 			<!--show drop down menu-->
 			<div isteven-multi-select input-model="filter" output-model="outputSelect"
 				button-label="name" item-label="name" tick-property="ticked"></div>
 		</div>
+		<script type="text/ng-template" id="headerCheckbox.html">
+			<input type="checkbox" ng-model="checkboxes.checked" class="select-all" value="" />
+		</script>
 		<table ng-table="tableParams"
 				class="table table-striped table-condensed table-hover table-align table-bordered">
 			<tr ng-repeat="teacher in $data" ng-form="teacherForm"
 				demo-tracked-table-row="teacher">
+				<td header-class="'active'" header="'headerCheckbox.html'"><input
+					type="checkbox" ng-model="checkboxes.items[teacher.tid]"></td>
+				<td ng-if="filter[1].ticked" data-title="'账号'"
+					filter="{tnumber : 'text'}" 
+					sortable="'tnumber'" header-class="'active'" 
+					demo-tracked-table-cell >
+					<button style="border: 0;text-align: center;vertical-align: middle;color:grey;" 
+						class="btn btn-default" title="点击编辑教师信息"
+					ng-click="addTeacher(teacher)">{{teacher.tnumber}}</button></td>
+					
 				<td ng-if="filter[0].ticked" data-title="'姓名'" 
 					filter="{tname: 'text'}" sortable="'tname'" 
 					header-class="'active'" demo-tracked-table-cell
 					>{{teacher.tname}}</td>
-
-				<td ng-if="filter[1].ticked" data-title="'账号'"
-					filter="{tnumber : 'text'}" 
-					sortable="'tnumber'" header-class="'active'" 
-					demo-tracked-table-cell >{{teacher.tnumber}}</td>
 
 				<td ng-if="filter[2].ticked" data-title="'性别'"
 					filter="{tsex: 'text'}" sortable="'tsex'"
@@ -76,3 +88,167 @@
 	</div>
 </div>
 </div>
+
+
+<!--template for edit modal-->
+<script type="text/ng-template" id="addTeacher.html">
+	<div class="modalCustom">
+		<div>
+			<div class="modal-content">
+				<!--header.....-->
+				<div class="modal-header" style="height: 50px;">
+				<a class="close glyphicon glyphicon-remove" style="color: darkred;" ng-click="cancel()" autofocus="false"></a>
+					<p class="text-left">
+						<span style="font-size: 23px; font-weight: 600;">添加信息</span>
+					</p>
+				</div>
+				<!--main body......-->
+				<div class="modal-body">
+					<div>
+						<form name="TeaInfForm"
+							action="#" method="post" novalidate>
+							<table width="100%" border="1"
+								class="table table-hover table-bordered table-striped">
+									<tr class="form-group">
+										<td>*账号</td>
+										<td><span><input type="text" class="form-control" name="tnumber"
+											ng-model="teacher.tnumber" ng-pattern="/^[0-9]*$/" required/></span>
+										<span class="error-display" ng-show="TeaInfForm.tnumber.$dirty && TeaInfForm.tnumber.$invalid"> 
+											<span class="fa fa-close" ng-show="TeaInfForm.tnumber.$error.pattern" ng-bind=NUMBER_INVALID></span>
+											<span class="fa fa-close" ng-show="TeaInfForm.tnumber.$error.required" ng-bind=NUMBER_EMPTY></span>
+										</span>
+										</td>
+										<td>*姓名</td>
+										<td><span><input type="text" class="form-control" 
+											autofocus="autofocus" name="tname" ng-model="teacher.tname" required/></span>
+										<span class="error-display" ng-show="TeaInfForm.tname.$dirty"> 
+											<span class="fa fa-close" ng-show="TeaInfForm.tname.$error.required" ng-bind=NAME_EMPTY></span>
+										</span>
+										</td>
+									</tr>
+									<tr class="form-group">
+										<td>性别</td>
+										<td><span><select class="form-control" ng-model="teacher.tsex"
+													ng-options="sex.name as sex.name for sex in gender">
+												 </select></span>
+										</td>
+										<td>*角色</td>
+										<td><span><select class="form-control" ng-model="teacher.trole"
+													ng-options="role.id as role.name for role in roles">
+												 </select></span>
+										</td>
+									</tr>
+									<tr class="form-group">
+										<td>学院</td>
+										<td><span><select class="form-control" ng-model="teacher.tAcademy" ng-click="loadMajor()"
+													ng-options="academy.aid as academy.aname for academy in academies">
+												 </select></span>
+										</td>
+										<td>专业</td>
+										<td><span><select class="form-control" ng-model="teacher.tMajor" ng-click="loadClass()"
+													ng-options="major.mid as major.mname for major in majors">
+											</select></span>
+										</td>
+									</tr>
+									<tr class="form-group">
+										<td>班级</td>
+										<td><span><select class="form-control" ng-model="teacher.tClass"
+													ng-options="class.cid as class.display for class in classes">
+										</select></span>
+										</td>
+									</tr>
+									<tr class="form-group">
+										<td>邮箱</td>
+										<td><span><input type="email" class="form-control" 
+											autofocus="autofocus" name="tEmail" ng-model="teacher.tEmail"/></span>
+										<span class="error-display" ng-show="TeaInfForm.tEmail.$dirty && TeaInfForm.tEmail.$invalid"> 
+											<span class="fa fa-close" ng-show="TeaInfForm.tEmail.$error.email" ng-bind=EMAIL_INVALID></span>
+										</span>
+										</td>
+										<td>联系电话</td>
+										<td><span><input type="text" class="form-control" name="tPhone"
+											ng-model="teacher.tPhone" ng-pattern="/^[0-9]*$/"/></span>
+										<span class="error-display" ng-show="TeaInfForm.tPhone.$dirty && TeaInfForm.tPhone.$invalid"> 
+											<span class="fa fa-close" ng-show="TeaInfForm.tPhone.$error.pattern" ng-bind=PHONE_INVALID></span>
+										</span>
+										</td>
+									</tr>
+									<tr class="form-group">
+										<td>身份证号</td>
+										<td><span><input type="text" class="form-control" name="tCertiID"
+											ng-model="teacher.tCertiID"/></span></td>
+										<td>民族</td>
+										<td><span><input type="text" class="form-control" name="tNation"
+											ng-model="teacher.tNation"/></span></td>
+									</tr>
+									<tr class="form-group">
+										<td>*登录密码</td>
+										<td><span><input type="password" class="form-control" name="tpassword"
+											ng-model="teacher.tpassword" required/></span>
+										<span class="error-display" ng-show="TeaInfForm.tpassword.$dirty"> 
+											<span class="fa fa-close" ng-show="TeaInfForm.tpassword.$error.required" ng-bind=PASSWORD_EMPTY></span>
+										</span>
+										</td>
+										<td>*确认密码</td>
+										<td><span><input type="password" class="form-control" name="password1"
+											ng-model="teacher.password1" required/></span>
+										<span class="error-display" ng-show="TeaInfForm.password1.$dirty"> 
+											<span class="fa fa-close" ng-show="TeaInfForm.password1.$error.required" ng-bind=PASSWORD_EMPTY></span>
+											<span class="fa fa-close" ng-show="!TeaInfForm.password1.$error.required && (teacher.tpassword != teacher.password1)" ng-bind=PASSWORD_NOT_EQUAL></span>
+										</span>
+										</td>
+									</tr>
+							</table>
+						</form>
+					</div>
+				</div>
+				<!--modal body end-->
+				<!--modal footer....-->
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary"
+						ng-click="addTeacherInfo()" ng-disabled="TeaInfForm.$invalid">保存</button>
+					<button type="button" class="btn btn-danger" ng-click="cancel()">取消</button>
+				</div>
+			</div>
+		</div>
+
+	</div>
+</script>
+
+<script type="text/ng-template" id="sureSaveT.html">
+	<div class="modalCustom">
+		<di>
+			<div class="modal-content">
+				<div class="modal-header">
+					<h2 class="modal-title" style="font-size: 20px; font-weight: 600;">提示</h2>
+				</div>
+				<div class="modal-body">
+					<h3>确定保存所编辑内容吗？</h3>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary btn-lg yes" style="float: left;width: 16%" ng-click="yes()">是</button>
+					<button type="button" class="btn btn-danger btn-lg no" style="float: right;width: 16%" ng-click="no()">否</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</script>
+
+<script type="text/ng-template" id="sureDelete.html">
+	<div class="modalCustom">
+		<div>
+			<div class="modal-content">
+				<div class="modal-header">
+					<h2 class="modal-title" style="font-size: 20px; font-weight: 600;">提示</h2>
+				</div>
+				<div class="modal-body">
+					<h3>确定删除所选教师吗？</h3>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary btn-lg yes" style="float: left;width: 16%" ng-click="yes()">是</button>
+					<button type="button" class="btn btn-danger btn-lg no" style="float: right;width: 16%" ng-click="no()">否</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</script>
