Complete exam page and student score view page.

--- a/src/main/resources/static/entrance/home/home.html
+++ b/src/main/resources/static/entrance/home/home.html
@@ -44,6 +44,7 @@
                   <li><a><i class="fa fa-balance-scale"></i>成绩<span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li ui-sref-active="active"><a ui-sref=".score-view">查看</a></li>
+                      <li ui-sref-active="active"><a ui-sref=".score-view-teacher">管理</a></li>
                       <li ui-sref-active="active"><a ui-sref=".score-mark">收藏</a></li>
                       <li ui-sref-active="active"><a ui-sref=".score-report">报表</a></li>
                     </ul>
