--- a/src/main/resources/static/entrance/member-student/member-student.html
+++ b/src/main/resources/static/entrance/member-student/member-student.html
@@ -248,7 +248,7 @@
 	</div>
 </script>
 
-<script type="text/ng-template" id="sureDelete.html">
+<script type="text/ng-template" id="sureDeleteS.html">
 	<div class="modalCustom">
 		<div>
 			<div class="modal-content">
