--- a/src/main/resources/static/entrance/member-teacher/member-teacher.html
+++ b/src/main/resources/static/entrance/member-teacher/member-teacher.html
@@ -234,7 +234,7 @@
 	</div>
 </script>
 
-<script type="text/ng-template" id="sureDelete.html">
+<script type="text/ng-template" id="sureDeleteT.html">
 	<div class="modalCustom">
 		<div>
 			<div class="modal-content">
