--- a/src/main/resources/static/entrance/home/home.html
+++ b/src/main/resources/static/entrance/home/home.html
@@ -28,6 +28,7 @@
                     <ul class="nav child_menu" id="information">
                       <li ui-sref-active="active"><a ui-sref=".infomation-view">查看</a></li>
                       <li ui-sref-active="active"><a ui-sref=".infomation-news">消息</a></li>
+                      <li ui-sref-active="active"><a ui-sref=".infomation-schedule">课程表</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-book"></i>课程<span class="fa fa-chevron-down"></span></a>
@@ -45,7 +46,6 @@
                     <ul class="nav child_menu">
                       <li ui-sref-active="active"><a ui-sref=".score-view">查看</a></li>
                       <li ui-sref-active="active"><a ui-sref=".score-view-teacher">管理</a></li>
-                      <li ui-sref-active="active"><a ui-sref=".score-mark">收藏</a></li>
                       <li ui-sref-active="active"><a ui-sref=".score-report">报表</a></li>
                     </ul>
                   </li>
