--- a/src/main/resources/static/entrance/member-student/member-student.html
+++ b/src/main/resources/static/entrance/member-student/member-student.html
@@ -24,8 +24,8 @@
 				<td ng-if="filter[1].ticked" data-title="'账号'"
 					filter="{snumber : 'text'}" sortable="'snumber'" 
 					header-class="'active'" demo-tracked-table-cell 
-					><button style="border: 0;text-align: center;vertical-align: middle;color:grey;" 
-						class="btn btn-default" title="点击编辑学生信息"
+					><button type="button" style="text-align: center;vertical-align: middle;" 
+						class="btn btn-info" title="点击编辑学生信息"
 					ng-click="addStudent(student)">{{student.snumber}}</button></td>
 				
 				<td ng-if="filter[0].ticked" data-title="'姓名'" 
