Complete schedule and select course page.

--- a/src/main/resources/static/entrance/dashboard.html
+++ b/src/main/resources/static/entrance/dashboard.html
@@ -38,6 +38,7 @@
 <link rel="stylesheet" href="../global/plugins/angular-chart/angular-chart.css" />
 <link rel="stylesheet" href="../global/plugins/ngTagsInput/ng-tags-input.bootstrap.min.css"/>
 <link rel="stylesheet" href="../global/plugins/ngTagsInput/ng-tags-input.min.css"/>
+<link rel="stylesheet" href="../global/plugins/angular-tooltips/angular-tooltips.min.css"/>
 
 <!-- NProgress -->
 <link href="../vendors/nprogress/nprogress.css" rel="stylesheet">
@@ -96,6 +97,7 @@
 	<script src="../global/plugins/angular-chart/Chart.min.js"></script>
 	<script src="../global/plugins/angular-chart/angular-chart.min.js"></script>
 	<script src="../global/plugins/ngTagsInput/ng-tags-input.min.js"></script>
+	<script src="../global/plugins/angular-tooltips/angular-tooltips.min.js"></script>
 	
 
     <!-- FastClick -->
